Initial commit: websocket server, web interface, admin panel
